Add s3m_meta notebooks. Update all notebooks based on code changes.

--- a/RM/3_1_0/notebooks/ClusterType Examples.ipynb
+++ b/RM/3_1_0/notebooks/ClusterType Examples.ipynb
@@ -88,7 +88,7 @@
    "outputs": [],
    "source": [
     "ERF = ClusterType('Employee Record Form')\n",
-    "print(ERF)"
+    "ERF.definition_url = 'http://s3model.com/examples/ERF'"
    ]
   },
   {
@@ -104,6 +104,7 @@
     "choice.append(('Delete','https://datainsights.tech/examples/DeleteRecord'))\n",
     "action = XdStringType(\"Record Action\")\n",
     "action.docs = \"Select the action to perform.\"\n",
+    "action.definition_url = 'http://s3model.com/examples/action_choice'\n",
     "action.enums = choice\n",
     "print(action)"
    ]
@@ -126,8 +127,7 @@
     "empnum = XdStringType('Employee Number')\n",
     "empnum.docs = 'An employee number consists of a single character department code (A-E) and 5 digits (0-9).'\n",
     "empnum.definition_url = 'https://datainsights.tech/examples/EmployeeNumber'\n",
-    "empnum.regex = '[A-E]{1}[0-9]{5}'\n",
-    "print(empnum)"
+    "empnum.regex = '[A-E]{1}[0-9]{5}'"
    ]
   },
   {
@@ -138,15 +138,16 @@
    "source": [
     "joined = XdTemporalType(\"Date of Joining\")\n",
     "joined.docs = \"Require a full date. Disallow all others.\"\n",
-    "joined.cardinality = ('date', (1,1))\n",
-    "joined.cardinality = ('time', (0,0))\n",
-    "joined.cardinality = ('datetime', (0,0))\n",
-    "joined.cardinality = ('day', (0,0))\n",
-    "joined.cardinality = ('month', (0,0))\n",
-    "joined.cardinality = ('year', (0,0))\n",
-    "joined.cardinality = ('year_month', (0,0))\n",
-    "joined.cardinality = ('month_day', (0,0))\n",
-    "joined.cardinality = ('duration', (0,0))\n",
+    "joined.definition_url = 'http://s3model.com/examples/joindate'\n",
+    "joined.cardinality = ('date', [1,1])\n",
+    "joined.cardinality = ('time', [0,0])\n",
+    "joined.cardinality = ('datetime', [0,0])\n",
+    "joined.cardinality = ('day', [0,0])\n",
+    "joined.cardinality = ('month', [0,0])\n",
+    "joined.cardinality = ('year', [0,0])\n",
+    "joined.cardinality = ('year_month', [0,0])\n",
+    "joined.cardinality = ('month_day', [0,0])\n",
+    "joined.cardinality = ('duration', [0,0])\n",
     "print(joined)"
    ]
   },
@@ -159,7 +160,7 @@
     "fname = XdStringType('First Name')\n",
     "fname.docs = \"The employee's first name.\"\n",
     "fname.definition_url = 'https://datainsights.tech/examples/EmployeeFirstName'\n",
-    "fname.cardinality = ('value', (1,1))\n",
+    "fname.cardinality = ('value', [1,1])\n",
     "print(fname)"
    ]
   },
@@ -172,7 +173,7 @@
     "lname = XdStringType('Last Name')\n",
     "lname.docs = \"The employee's last name.\"\n",
     "lname.definition_url = 'https://datainsights.tech/examples/EmployeeLastName'\n",
-    "lname.cardinality = ('value', (1,1))\n",
+    "lname.cardinality = ('value', [1,1])\n",
     "print(lname)"
    ]
   },
@@ -201,15 +202,16 @@
    "source": [
     "dob = XdTemporalType(\"Date of Birth\")\n",
     "dob.docs = \"DOB allows a full date or just a month/year.\"\n",
-    "dob.cardinality = ('date', (0,1))\n",
-    "dob.cardinality = ('time', (0,0))\n",
-    "dob.cardinality = ('datetime', (0,0))\n",
-    "dob.cardinality = ('day', (0,0))\n",
-    "dob.cardinality = ('month', (0,0))\n",
-    "dob.cardinality = ('year', (0,0))\n",
-    "dob.cardinality = ('year_month', (0,1))\n",
-    "dob.cardinality = ('month_day', (0,0))\n",
-    "dob.cardinality = ('duration', (0,0))\n",
+    "dob.definition_url = 'http://s3model.com/examples/dob'\n",
+    "dob.cardinality = ('date', [0,1])\n",
+    "dob.cardinality = ('time', [0,0])\n",
+    "dob.cardinality = ('datetime', [0,0])\n",
+    "dob.cardinality = ('day', [0,0])\n",
+    "dob.cardinality = ('month', [0,0])\n",
+    "dob.cardinality = ('year', [0,0])\n",
+    "dob.cardinality = ('year_month', [0,1])\n",
+    "dob.cardinality = ('month_day', [0,0])\n",
+    "dob.cardinality = ('duration', [0,0])\n",
     "print(dob)"
    ]
   },
@@ -306,7 +308,7 @@
    },
    "outputs": [],
    "source": [
-    "print(ERF.asXSD())"
+    "print(ERF.getModel())"
    ]
   }
  ],
