--- a/RM/3_1_0/notebooks/DMType Examples.ipynb
+++ b/RM/3_1_0/notebooks/DMType Examples.ipynb
@@ -93,12 +93,14 @@
    "outputs": [],
    "source": [
     "ERF = ClusterType('Employee Record Form')\n",
+    "ERF.definition_url = 'http://s3model.com/examples/ERF'\n",
     "choice = []\n",
     "choice.append(('Add New','https://datainsights.tech/examples/AddNewRecord'))\n",
     "choice.append(('Modify','https://datainsights.tech/examples/ModifyRecord'))\n",
     "choice.append(('Delete','https://datainsights.tech/examples/DeleteRecord'))\n",
     "action = XdStringType(\"Record Action\")\n",
     "action.docs = \"Select the action to perform.\"\n",
+    "action.definition_url = 'http://s3model.com/examples/action_choice'\n",
     "action.enums = choice\n",
     "empnum = XdStringType('Employee Number')\n",
     "empnum.docs = 'An employee number consists of a single character department code (A-E) and 5 digits (0-9).'\n",
@@ -106,6 +108,7 @@
     "empnum.regex = '[A-E]{1}[0-9]{5}'\n",
     "joined = XdTemporalType(\"Date of Joining\")\n",
     "joined.docs = \"Require a full date. Disallow all others.\"\n",
+    "joined.definition_url = 'http://s3model.com/examples/joindate'\n",
     "joined.cardinality = ('date', [1,1])\n",
     "joined.cardinality = ('time', [0,0])\n",
     "joined.cardinality = ('datetime', [0,0])\n",
@@ -133,6 +136,7 @@
     "desig.enums = jobs\n",
     "dob = XdTemporalType(\"Date of Birth\")\n",
     "dob.docs = \"DOB allows a full date or just a month/year.\"\n",
+    "dob.definition_url = 'http://s3model.com/examples/dob'\n",
     "dob.cardinality = ('date', [0,1])\n",
     "dob.cardinality = ('time', [0,0])\n",
     "dob.cardinality = ('datetime', [0,0])\n",
