--- a/RM/3_1_0/notebooks/Getting Started.ipynb
+++ b/RM/3_1_0/notebooks/Getting Started.ipynb
@@ -155,10 +155,10 @@
     "\n",
     "A data model is incomplete without computable meta-information to provide provenence and trust. This information may include who (person, company, etc.) the data is about, who participated and in what ways, data audit trail, workflow status, attestations of snapshots, protocols used in specifying the model. The components in this section allow the modeler to build any required model to track this information. \n",
     "\n",
-    "1. [AuditType](Audit%20Examples.ipynb)\n",
-    "1. [AttestationType](Attestation%20Examples.ipynb)\n",
     "1. [PartyType](Party%20Examples.ipynb)\n",
-    "1. [ParticipationType](Participation%20Examples.ipynb)"
+    "2. [AuditType](Audit%20Examples.ipynb)\n",
+    "3. [AttestationType](Attestation%20Examples.ipynb)\n",
+    "4. [ParticipationType](Participation%20Examples.ipynb)"
    ]
   },
   {
@@ -169,7 +169,7 @@
     "\n",
     "This data provides down-stream users of the information to fully understand the meaning of the data and do so without manual intervention, re-interpreting and retyping the meta-data.\n",
     "\n",
-    "1.  [DMType](DM%20Examples.ipynb)"
+    "1.  [DMType](DMType%20Examples.ipynb)"
    ]
   },
   {
