--- a/RM/3_1_0/notebooks/Party Examples.ipynb
+++ b/RM/3_1_0/notebooks/Party Examples.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Examples using the XdOrdinalType"
+    "# Examples using the PartyType"
    ]
   },
   {
@@ -34,7 +34,9 @@
    "source": [
     "import sys \n",
     "sys.path.append(\"../pylib/\")\n",
-    "from s3m_xdt import XdOrdinalType"
+    "from s3m_xdt import XdLinkType, XdStringType\n",
+    "from s3m_struct import ClusterType, XdAdapterType, ItemType\n",
+    "from s3m_meta import PartyType"
    ]
   },
   {
@@ -45,7 +47,7 @@
     }
    },
    "source": [
-    "Review the documentation of XdOrdinalType. "
+    "Review the documentation of PartyType. "
    ]
   },
   {
@@ -59,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "help(XdOrdinalType)"
+    "help(PartyType)"
    ]
   },
   {
@@ -70,34 +72,44 @@
     }
    },
    "source": [
-    "Create a XdOrdinal instance. We must provide a *label* and the *ordinals, symbols and definition url* at creation time. Each entry is a tuple. The tuples are appended to a list. The list is ordered so the sequence that you append the entries is the sequence that they will appear in the model.  This may or may not be significant to the eventual user interface. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = []\n",
-    "c.append((0,'lo','https://datainsights.tech/examples/lo'))\n",
-    "c.append((1,'mid','https://datainsights.tech/examples/mid'))\n",
-    "c.append((2,'hi','https://datainsights.tech/examples/hi'))\n",
-    "d = XdOrdinalType(\"Severity Level\", c)\n",
-    "d.docs = \"Select a severity level.\"\n",
-    "d.definition_url = 'http://s3model.com/examples/'\n",
-    "print(d)"
+    "Create an Party instance."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
-    "print(d.getModel())"
+    "\n",
+    "pty = PartyType('Test Party Model')\n",
+    "\n",
+    "# create the required contents and any optionals that we want \n",
+    "s = XdStringType(\"Some details\") # this will be in the details cluster\n",
+    "s.definition_url = 'http://s3model.com/examples/somedetails'\n",
+    "a = XdAdapterType() # in a cluster we need an adapter\n",
+    "a.value = s\n",
+    "\n",
+    "lnk = XdLinkType(\"Party Reference Link\", \"dm-cjn9dpaqt000lb18pyzhhrhj1\", \"party reference\")\n",
+    "lnk.relation_uri = \"http://s3model.com/dm-cjn9dpaqt000lb18pyzhhrhj1\"\n",
+    "lnk.docs = \"A link to model of more information about the party.\"\n",
+    "lnk.definition_url = 'http://s3model.com/examples/party_ref'\n",
+    "\n",
+    "\n",
+    "loc = ClusterType(\"Test Party Location\")\n",
+    "loc.docs = \"A structure of a model for details about the location of the party.\"\n",
+    "loc.definition_url = 'http://s3model.com/examples/party_location_details'\n",
+    "loc.items = a # in real world situations a details cluster would be an expansive structure with several items\n",
+    "\n",
+    "# add content to the PartyType instance\n",
+    "pty.party_details = loc\n",
+    "pty.party_ref = lnk\n",
+    "\n",
+    "print(pty)"
    ]
   },
   {
@@ -106,12 +118,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d.normal_status = 'mid'\n",
-    "print(d.asXML())"
+    "# Review the model\n",
+    "print(pty.getModel())"
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python [conda env:S3Model]",
    "language": "python",
