--- a/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
@@ -70,6 +70,8 @@
     }
    },
    "source": [
+    "Notice in the above documentation that *label* and *definition_url* are both marked **REQUIRED**. The *label* must be passed on initialization. This is true of all XdTypes. \n",
+    "\n",
     "Create a XdBoolean instance. Set some values. Note the format for the *options* dictionary. We also must pass in the *label* as a string. \n",
     "\n",
     "In this case we are going to set a boolean value based on Textual (select or radio button UI) reactions to a book called *Can it happen here?*"
@@ -86,33 +88,7 @@
    "outputs": [],
    "source": [
     "opt = {'trues':['Yes','Maybe','Possible'], 'falses':['No','Unlikely','Impossible']}\n",
-    "d = XdBooleanType('Can it happen here?', opt)\n",
-    "print(d)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Check the ouput signature when printing an instance. It prints the class type, label and unique ID. This is common across all extended datatypes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print(d)"
+    "d = XdBooleanType('Can it happen here?', opt)"
    ]
   },
   {
@@ -138,20 +114,6 @@
    "outputs": [],
    "source": [
     "d.docs = \"Provide a True/False result based on user selected option from pulldown or radio button style UI. \\nWhat is their reaction to the book?\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print(d.docs)"
    ]
   },
   {
@@ -195,16 +157,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Check the ouput signature by printing an instance. It prints the class type, label and unique ID. This is common across all XdAnyType subtypes (aka. XdTypes)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "outputs": [],
    "source": [
-    "print(d.docs)"
+    "print(d)"
    ]
   },
   {
@@ -277,7 +251,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXSD())"
+    "print(d.getModel())"
    ]
   },
   {
