--- a/RM/3_1_0/notebooks/XdCount Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdCount Examples.ipynb
@@ -93,6 +93,7 @@
     "# now the count model\n",
     "d = XdCountType(\"Widgets Count\")\n",
     "d.docs = \"Record the number of widgets in inventory.\"\n",
+    "d.definition_url = 'https://s3model.com/widget/counts'\n",
     "d.units = u\n",
     "print(d)"
    ]
@@ -105,7 +106,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXSD())"
+    "print(d.getModel())"
    ]
   },
   {
@@ -154,6 +155,7 @@
     "# now the count model\n",
     "d = XdCountType(\"Example Count\")\n",
     "d.docs = \"A count type with an inclusive min/max value set.\"\n",
+    "d.definition_url = 'https://s3model.com/examples/things'\n",
     "d.units = u\n",
     "d.min_inclusive = 0 # cannot have a negative value\n",
     "d.max_inclusive = 100 # cannot have a value over 100\n",
@@ -168,7 +170,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXSD())"
+    "print(d.getModel())"
    ]
   },
   {
