--- a/RM/3_1_0/notebooks/XdFile Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdFile Examples.ipynb
@@ -70,7 +70,7 @@
     }
    },
    "source": [
-    "Create a XdFile instance. We must provide a label at creation time. We will set the raw file size (in bytes) as an integer. We will get the filesize using the Python *os* module. We will set the *label* and *alt_txt* attributes to the same string.  "
+    "Create a XdFile instance. We will set the raw file size (in bytes) as an integer. We will get the filesize using the Python *os* module. Just out of convience we will also set the *label* and *alt_txt* attributes to the same string.  "
    ]
   },
   {
@@ -85,8 +85,7 @@
     "d.size = filesize\n",
     "d.alt_txt = \"S3Model Logo\"\n",
     "d.docs = \"The awesome S3Model Logo\"\n",
-    "print(d)\n",
-    "print(d.alt_txt, 'File size in bytes: ' + str(d.size))\n"
+    "d.definition_url = 'http://s3model.com/examples/files'"
    ]
   },
   {
@@ -111,6 +110,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Take a look at some details of the model.\n",
+    "print(d, '\\n')\n",
+    "print(d.alt_txt, 'File size in bytes: ' + str(d.size))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -125,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(d.asXSD())"
+    "print(d.getModel())"
    ]
   },
   {
@@ -160,7 +170,8 @@
     "d.alt_txt = \"S3Model Logo\"\n",
     "d.docs = \"The awesome S3Model Logo\"\n",
     "d.uri = \"https://datainsights.tech/S3M.logo\"\n",
-    "d.cardinality = ('size', (1,1))\n",
+    "d.definition_url = 'http://s3model.com/examples/files'\n",
+    "d.cardinality = ('size', [1,1])\n",
     "print(d)"
    ]
   },
@@ -170,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(d.asXSD())"
+    "print(d.getModel())"
    ]
   },
   {
