--- a/RM/3_1_0/notebooks/XdFloat Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdFloat Examples.ipynb
@@ -82,6 +82,7 @@
     "# now the Float model\n",
     "d = XdFloatType(\"Sensor 01\")\n",
     "d.docs = \"Record floating point numbers from an IoT sensor.\"\n",
+    "d.definition_url = 'http://s3model.com/examples/sensor'\n",
     "d.min_inclusive = 100\n",
     "d.max_inclusive = 1000\n",
     "print(d)"
@@ -95,7 +96,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXSD())"
+    "print(d.getModel())"
    ]
   },
   {
