--- a/RM/3_1_0/notebooks/XdLink Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdLink Examples.ipynb
@@ -89,31 +89,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Check the ouput signature when printing an instance. It prints the class type, label and unique ID. This is common across all extended datatypes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print(d)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Add a URL for the relationship (rel) supplied upon creation."
@@ -154,20 +129,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print(d.docs)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -189,9 +150,7 @@
     }
    },
    "source": [
-    "Add a defining URL for the model. This will be translated into machine processable instructions in RDF as well as appended to the human-readable docs. This URL should define or describe the value expressed in the *label*.\n",
-    "\n",
-    "If you do not want it to appear in your docs, then set the definition_url before setting your docs string."
+    "Add a defining URL for the model. This will be translated into machine processable instructions in RDF as well as appended to the human-readable docs. This URL should define or describe the value expressed in the *label*."
    ]
   },
   {
@@ -208,17 +167,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Check the ouput signature when printing an instance. It prints the class type, label and unique ID. This is common across all extended datatypes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
+    "scrolled": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "outputs": [],
    "source": [
-    "print(d.docs)"
+    "print(d)"
    ]
   },
   {
@@ -294,7 +264,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXSD())"
+    "print(d.getModel())"
    ]
   },
   {
@@ -370,7 +340,8 @@
     "d = XdLinkType('Related DM', lnk, rel)\n",
     "d.relation_uri = \"http://purl.obolibrary.org/obo/BFO_0000063\"\n",
     "d.docs = \"Provide a meaningful link to another S3Model DM\"\n",
-    "print(d)"
+    "d.definition_url = 'https://s3model.com/examples'\n",
+    "print(d.getModel())"
    ]
   },
   {
@@ -396,8 +367,8 @@
    },
    "outputs": [],
    "source": [
-    "d.cardinality = ('vtb', (1,1))\n",
-    "d.cardinality = ('vte', (1,1))\n",
+    "d.cardinality = ('vtb', [1,1])\n",
+    "d.cardinality = ('vte', [1,1])\n",
     "print(d.cardinality)"
    ]
   },
@@ -423,7 +394,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXSD())"
+    "print(d.getModel())"
    ]
   },
   {
@@ -462,6 +433,7 @@
     "d = XdLinkType('Related DM', lnk, rel)\n",
     "d.relation_uri = \"http://purl.obolibrary.org/obo/BFO_0000063\"\n",
     "d.docs = \"Provide a meaningful link to another S3Model DM\"\n",
+    "d.definition_url = 'https://s3model.com/examples'\n",
     "print(d)"
    ]
   },
@@ -488,9 +460,9 @@
    },
    "outputs": [],
    "source": [
-    "d.cardinality = ('vtb', (0,1))\n",
-    "d.cardinality = ('vte', (0,1))\n",
-    "d.cardinality = ('location', (1,1))\n",
+    "d.cardinality = ('vtb', [0,1])\n",
+    "d.cardinality = ('vte', [0,1])\n",
+    "d.cardinality = ('location', [1,1])\n",
     "print(d)"
    ]
   },
@@ -502,21 +474,28 @@
     }
    },
    "source": [
-    "Note that *location* causes both *latitude* and *longitude* to be required. "
+    "Note that *location* causes both *latitude* and *longitude* to be required. You can verify this in the model below."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
+    "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "outputs": [],
    "source": [
-    "print(d.asXSD())"
+    "print(d.getModel())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is the result XML instance example."
    ]
   },
   {
