--- a/RM/3_1_0/notebooks/XdQuantity Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdQuantity Examples.ipynb
@@ -95,10 +95,18 @@
     "# now the model\n",
     "d = XdQuantityType(\"Currency Amount\")\n",
     "d.docs = \"Record the amount of currency.\"\n",
+    "d.definition_url = 'http://s3model.com/examples/currency'\n",
     "d.units = u\n",
     "d.min_inclusive = 0  # can't have a negative amount\n",
     "d.fraction_digits = 2 # currency is recorded with only two decimal places\n",
     "print(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Examine the model."
    ]
   },
   {
@@ -109,7 +117,14 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXSD())"
+    "print(d.getModel())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print an XML instance example."
    ]
   },
   {
