--- a/RM/3_1_0/notebooks/XdString Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdString Examples.ipynb
@@ -69,7 +69,7 @@
     }
    },
    "source": [
-    "Create a XdString instance. In this case we are going to set a string value for the color of an item chosen by a customer."
+    "Create a XdString instance. In this case we are going to set a string value for the color of an item chosen by a customer. Notice in the above documentation that *label* and *definition_url* are both marked **REQUIRED**. The *label* must be passed on initialization. This is true of all XdTypes. "
    ]
   },
   {
@@ -93,21 +93,33 @@
     }
    },
    "source": [
-    "Check the ouput signature when printing an instance. It prints the class type, label and unique ID. This is common across all extended datatypes."
+    "# Ontological Semantics (part 1)\n",
+    "It is important to understand the relationship between the model and what the model is about. \n",
+    "The unique ID *mcuid* is a synonym for the *label* which is the *Subject* of the *SPO triple*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Add a defining URL for the model. This will be translated into machine processable instructions in RDF as well as appended to the human-readable docs. This URL should define or describe the value expressed in the *label*."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
    "source": [
-    "print(d)"
+    "d.definition_url = 'https://s3model.com/items/colors'"
    ]
   },
   {
@@ -146,59 +158,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.docs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Ontological Semantics (part 1)\n",
-    "It is important to understand the relationship between the model and what the model is about. \n",
-    "The unique ID *mcuid* is a synonym for the *label* which is the *Subject* of the *SPO triple*."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Add a defining URL for the model. This will be translated into machine processable instructions in RDF as well as appended to the human-readable docs. This URL should define or describe the value expressed in the *label*.\n",
-    "\n",
-    "If you do not want it to appear in your docs, then set the definition_url before setting your docs string.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "d.definition_url = 'https://s3model.com/items/colors'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "print(d, '\\n')\n",
     "print(d.docs)"
    ]
   },
@@ -214,28 +174,10 @@
     "In addition to the defining_url we can add more RDF semantics to the model for machine processing. \n",
     "\n",
     "We do this by passing in tuples with a predicate/object pair. \n",
-    "These are part of the RDF subject, predicate, object triple concept. This is the foundation of semantic graph data. If you aren't familiar with these concepts then see: http://www.linkeddatatools.com/introducing-rdf "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "If you aren't using your own vocabulary for semantic markup. Or even if you are for part of your semantics. It is a good practice to reuse publically available and commonly used vocabularies as they apply to your model. A great place to start finding vocabularies is at https://lov.linkeddata.es/dataset/lov "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
+    "These are part of the RDF subject, predicate, object triple concept. This is the foundation of semantic graph data. If you aren't familiar with these concepts then see: http://www.linkeddatatools.com/introducing-rdf \n",
+    "\n",
+    "If you aren't using your own vocabulary for semantic markup. Or even if you are for part of your semantics. It is a good practice to reuse publically available and commonly used vocabularies as they apply to your model. A great place to start finding vocabularies is at https://lov.linkeddata.es/dataset/lov \n",
+    "\n",
     "In S3Model, the model component which is defined by the unique ID *mcuid*, is the Subject. \n",
     "So here we are adding a predicate and an object to give enhanced meaning to our model. \n",
     "The unique ID *mcuid* is a synonym for the *label*.\n",
@@ -279,7 +221,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXSD())"
+    "print(d.getModel())"
    ]
   },
   {
@@ -403,7 +345,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXSD())"
+    "print(d.getModel())"
    ]
   },
   {
@@ -459,7 +401,7 @@
    "outputs": [],
    "source": [
     "d.default = 'Blue'\n",
-    "print(d.asXSD())"
+    "print(d.getModel())"
    ]
   },
   {
@@ -526,7 +468,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXSD())"
+    "print(d.getModel())"
    ]
   },
   {
