--- a/RM/3_1_0/notebooks/XdTemporal Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdTemporal Examples.ipynb
@@ -81,18 +81,19 @@
    "source": [
     "d = XdTemporalType(\"A Date Only\")\n",
     "d.docs = \"Require a full date. Disallow all others.\"\n",
-    "d.cardinality = ('date', (1,1))\n",
-    "d.cardinality = ('time', (0,0))\n",
-    "d.cardinality = ('datetime', (0,0))\n",
-    "d.cardinality = ('day', (0,0))\n",
-    "d.cardinality = ('month', (0,0))\n",
-    "d.cardinality = ('year', (0,0))\n",
-    "d.cardinality = ('year_month', (0,0))\n",
-    "d.cardinality = ('month_day', (0,0))\n",
-    "d.cardinality = ('duration', (0,0))\n",
+    "d.definition_url = 'http://s3model.com/examples/dates'\n",
+    "d.cardinality = ('date', [1,1])\n",
+    "d.cardinality = ('time', [0,0])\n",
+    "d.cardinality = ('datetime', [0,0])\n",
+    "d.cardinality = ('day', [0,0])\n",
+    "d.cardinality = ('month', [0,0])\n",
+    "d.cardinality = ('year', [0,0])\n",
+    "d.cardinality = ('year_month', [0,0])\n",
+    "d.cardinality = ('month_day', [0,0])\n",
+    "d.cardinality = ('duration', [0,0])\n",
     "print(d)\n",
     "print('\\n\\n')\n",
-    "print(d.asXSD())"
+    "print(d.getModel())"
    ]
   },
   {
@@ -114,18 +115,19 @@
    "source": [
     "d = XdTemporalType(\"Date or Month/Year\")\n",
     "d.docs = \"Allow Date or Month/Year. Disallow all others.\"\n",
-    "d.cardinality = ('date', (0,1))\n",
-    "d.cardinality = ('time', (0,0))\n",
-    "d.cardinality = ('datetime', (0,0))\n",
-    "d.cardinality = ('day', (0,0))\n",
-    "d.cardinality = ('month', (0,0))\n",
-    "d.cardinality = ('year', (0,0))\n",
-    "d.cardinality = ('year_month', (0,1))\n",
-    "d.cardinality = ('month_day', (0,0))\n",
-    "d.cardinality = ('duration', (0,0))\n",
+    "d.definition_url = 'http://s3model.com/examples/dates'\n",
+    "d.cardinality = ('date', [0,1])\n",
+    "d.cardinality = ('time', [0,0])\n",
+    "d.cardinality = ('datetime', [0,0])\n",
+    "d.cardinality = ('day', [0,0])\n",
+    "d.cardinality = ('month', [0,0])\n",
+    "d.cardinality = ('year', [0,0])\n",
+    "d.cardinality = ('year_month', [0,1])\n",
+    "d.cardinality = ('month_day', [0,0])\n",
+    "d.cardinality = ('duration', [0,0])\n",
     "print(d)\n",
     "print('\\n\\n')\n",
-    "print(d.asXSD())"
+    "print(d.getModel())"
    ]
   }
  ],
